--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(notepad
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        functions.cpp
+        includeFunctions.h
 
 
     )
